--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.0.3
 django-debug-toolbar==2.2
 django-environ==0.4.5
 django-extensions==2.2.6
+djangorestframework==3.11.0
 gunicorn==20.0.4
 ipython==7.11.1
 ipython-genutils==0.2.0
